add backlink for EasyTech

--- a/index.html
+++ b/index.html
@@ -440,6 +440,7 @@
             <div class="title text-center py-5">
                 <h2 class="position-relative d-inline-block">Bài Viết Công Nghệ Mới Nhất</h2>
             </div>
+            
 
             <div class="row g-3">
                 <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
@@ -503,6 +504,10 @@
                         <a href="#" class="btn btn-primary">Đọc Thêm</a>
                     </div>
                 </div>
+            </div>
+            </div><br>
+            <div class="row g-3" align="center">
+                <h3>Xem thêm các bài viết hay tại <a href="https://lekhai0123.github.io/EasyTech/">EasyTech</a></h3>
             </div>
         </div>
     </section>
@@ -768,6 +773,15 @@
                                 </a>
                             </li>
                         </ul>
+                    </div>
+                    <h5 class="fw-light mb-3">Đối tác</h5>
+                    <div class="d-flex justify-content-start align-items-start my-2 text-muted">
+                        <span class="me-3">
+                            <img width="30" src="https://lekhai0123.github.io/EasyTech/img/logo.jpeg">
+                        </span>
+                        <span class="fw-light">
+                            <a href="https://lekhai0123.github.io/EasyTech/" itemprop="email">EasyTech</a>
+                        </span>
                     </div>
                 </div>
             </div>
